# Rust-Server

./: Cargo.toml  README.md
src/: main.rs  scripts.js  serve_file copy.rs  serve_file.rs  styles.css
